--- a/KoketSite/skin/frontend/shopper/koket/css/override.css
+++ b/KoketSite/skin/frontend/shopper/koket/css/override.css
@@ -1,13 +1,3 @@
-/*
-@font-face {
-    font-family: 'Le Super Type Regular';
-    src: url('fonts/Le_Super_Type_Regular.eot');
-    src: local('☺'), url('fonts/Le_Super_Type_Regular.woff') format('woff'), url('fonts/Le_Super_Type_Regular.ttf') format('truetype'), url('fonts/Le_Super_Type_Regular.svg') format('svg');
-    font-weight: normal;
-    font-style: normal;
-}
-*/
-
 @import url(http://fonts.googleapis.com/css?family=Maven+Pro);
 
 
@@ -26,11 +16,6 @@ h1, h2, h3 {
     margin-top: 10px;
 }
 
-/*
-a.level-top {
-    font-family: "Le Super Type Regular", 'Source Sans Pro', "sans serif" !important;
-}
-*/
 
 /*menu items*/
 #queldoreiNav>li>a {
@@ -59,12 +44,16 @@ a.level-top {
     }
 }
 
-@media only screen and (max-width: 1200px) and (min-width: 960px) {
-    .grid_12 {
-        width: 1042px;
+
+
+@media only screen and (max-width: 1200px) and (min-width: 960px){
+    .top-dropdowns {
+        top: 20%;
+    }
+    .fixed .top-dropdowns {
+        top: 50%;
     }
 }
-
 .quick-view {
     left: 28%;
 }
@@ -87,6 +76,11 @@ a.level-top {
 }
 */
 
+header {
+    -webkit-transition: height 0.3s;
+    -moz-transition: height 0.3s;
+    transition: height 0.3s;
+}
 
 .cart-top > a span {
     font-family: "Yanone Kaffeesatz", Tahoma, Arial, sans-serif;
@@ -106,12 +100,60 @@ header a.logo {
     padding: 16px 32px;
 }
 
+
+@media only screen and (max-width: 959px) and (min-width: 768px){
+    header .grid_12 {
+        width: 100%;
+        margin: 0;
+    }
+}
+
+@media only screen and (min-width: 768px) and (max-width: 959px) {
+    .row {
+        margin:0 auto;
+        width: 100%;
+    }
+}
+
+@media only screen and (max-width: 767px) and (min-width: 480px) {
+    .row {
+        margin: 0 auto;
+        width: 100%;
+    }
+
+    .grid_12 {
+        width: 100%;
+        margin: 0;
+    }
+}
+
+@media only screen and (max-width: 767px) {
+    .row {
+        margin: 0 auto;
+        width: 100%;
+    }
+
+    .grid_12 {
+        width: 100%;
+        margin: 0;
+    }
+}
+
+
+
+
+@media only screen and (max-width: 767px) {
+    ul.links {
+        float: none;
+        margin: 0 10px;
+    }
+}
 header .grid_12 {
-    margin-left: 0;
+/*margin-left: 0;*/
 }
 
 header .row {
-    margin: 0 0;
+/*margin: 0 0;*/
 }
 
 /*smaller logo when scrolling*/
@@ -249,10 +291,35 @@ header.fixed a.logo {
     border-radius: 3px;
 }
 
-/*.modal-backdrop {*/
-    /*z-index: 40000 !important;*/
-/*}*/
+#product_addtocart_form .info {
+    border-bottom: 1px solid;
+    border-color: rgba(227,227,227,0.61);
+    width: 100%;
+    margin: 18px 0;
+}
 
-/*.modal {*/
-    /*z-index: 40050 !important;*/
-/*}*/
+/*#product_addtocart_form .info tr {
+    border-bottom: 1px solid;
+    border-color: rgba(227,227,227,0.61);
+}*/
+
+#product_addtocart_form .info th {
+    padding: 3px 24px 6px 3px;
+    font-weight: bold;
+}
+
+#product_addtocart_form table.info td {
+    padding: 3px 24px 6px 3px;
+}
+
+.product-view .qty-container .unit {
+    float: left;
+    margin-left: 10px;
+    line-height: 30px;
+    color: #000;
+    color: rgba(0,0,0,0.67);
+}
+
+#product_addtocart_form .sku {
+    font-weight: normal;
+}
