weghalen checkout knop, zodat je steeds via de shopping cart moet gaan om te betalen. Op die manier werkt de reward points module ok. translations, skinning

--- a/KoketSite/app/design/frontend/shopper/koket/template/catalog/product/view.phtml
+++ b/KoketSite/app/design/frontend/shopper/koket/template/catalog/product/view.phtml
@@ -168,7 +168,7 @@ echo '<div class="product-category-title">'.$_category->getName().'</div>';
                             }
                                 //$minimumAmount = $this->formatPrecision($minimumAmount, 2);
                             ?>
-                            <?php echo $this->__('Minimum order quantity') . ": " . $minimumAmount?>
+                            <?php echo $this->__('Minimum order quantity') . ": " . $minimumAmount . " " . $_product->getAttributeText('unit'); ?>
                         </div>
                     <?php endif; ?>
                 <?php endif; ?>
