--- a/KoketSite/app/design/frontend/shopper/koket/template/opc/wrapper.phtml
+++ b/KoketSite/app/design/frontend/shopper/koket/template/opc/wrapper.phtml
@@ -19,13 +19,12 @@
         <?php echo $this->getChildHtml('shipping')?>
         </form>
 
-        <div class="reward-block">
-            <h3><?php echo $this->__('Spend Your Points')?> - TO DO GERT</h3>
-<!--            <dl class="sp-methods" id="checkout-payment-method-load">-->
-<!--                <!-- Content dynamically loaded. Content from the methods.phtml is loaded during the ajax call -->-->
+<!--        <div class="reward-block">-->
+<!--            <h3>--><?php //echo $this->__('Spend Your Points')?><!-- - TO DO GERT</h3>-->
+<!--            <dl class="sp-methods" id="checkout-payment-method-load-reward">-->
+<!--                 Content dynamically loaded. Content from the methods.phtml is loaded during the ajax call -->
 <!--            </dl>-->
-
-        </div>
+<!--        </div>-->
 
     </div>
 
