--- a/KoketSite/app/design/frontend/shopper/koket/template/checkout/cart/cart-top.phtml
+++ b/KoketSite/app/design/frontend/shopper/koket/template/checkout/cart/cart-top.phtml
@@ -71,10 +71,10 @@
         </div>
         </div>
         <div class="buttons clearfix">
-            <button type="button" title="<?php echo $this->__('View Cart') ?>" class="button btn-continue" onclick="setLocation('<?php echo $this->getUrl('checkout/cart') ?>')"><span><span><?php echo $this->__('View Cart') ?></span></span></button>
+            <button type="button" title="<?php echo $this->__('View Cart or Checkout') ?>" class="button btn-continue" onclick="setLocation('<?php echo $this->getUrl('checkout/cart') ?>')"><span><span><?php echo $this->__('View Cart') ?></span></span></button>
             <?php if($_cartQty && $this->isPossibleOnepageCheckout()): ?>
                 <?php echo $this->getChildHtml('extra_actions') ?>
-                <button type="button" title="<?php echo $this->__('Checkout') ?>" class="button btn-checkout" onclick="setLocation('<?php echo $this->getUrl('onepage') ?>')"><span><span><?php echo $this->__('Continue to Checkout') ?></span></span></button>
+<!--                <button type="button" title="--><?php //echo $this->__('Checkout') ?><!--" class="button btn-checkout" onclick="setLocation('--><?php //echo $this->getUrl('onepage') ?><!--')"><span><span>--><?php //echo $this->__('Continue to Checkout') ?><!--</span></span></button>-->
             <?php endif ?>
         </div>
         <?php else: ?>
