matrix rate shipping module: made changes to enable free shipping to BE and neighbouring countries above a given threshold (different for BE and neighbours) css updates

--- a/KoketSite/app/design/frontend/shopper/koket/template/catalog/product/view.phtml
+++ b/KoketSite/app/design/frontend/shopper/koket/template/catalog/product/view.phtml
@@ -242,6 +242,8 @@ echo '<div class="product-category-title">'.$_category->getName().'</div>';
             jQuery('body').append('<div class="alert"></div>');
             var $alert = jQuery('.alert');
             $alert.slideDown(400);
+            message = "test gert " + message
+            alert("mm:" + message);
             $alert.html(message).append('<button></button>');
             jQuery('button').click(function () {
                 $alert.slideUp(400);
