--- a/KoketSite/skin/frontend/shopper/koket/css/override.css
+++ b/KoketSite/skin/frontend/shopper/koket/css/override.css
@@ -56,6 +56,7 @@ h1, h2, h3 {
 }
 .quick-view {
     left: 28%;
+    display: none !important;
 }
 
 /*#nav>li>a, #nav ul li a, #nav>li>a>span, #mobile-nav>li>a, #mobile-nav ul li a, #mobile-nav>li>a>span, #queldoreiNav>li>a, #queldoreiNav ul li a, #queldoreiNav>li>a>span {*/
