--- a/KoketSite/skin/frontend/shopper/koket/css/override.css
+++ b/KoketSite/skin/frontend/shopper/koket/css/override.css
@@ -170,6 +170,15 @@ div#faq a {
     margin: 0 0 0 0;
 }
 
+#faq table td {
+    padding: 0px 4px;
+    font-size: 0.8rem;
+}
+
+#faq .data-table th {
+    padding: 2px 4px !important;
+}
+
 
 @media only screen and (max-width: 767px) {
     ul.links {
