--- a/KoketSite/app/design/frontend/shopper/koket/template/page/html/header.phtml
+++ b/KoketSite/app/design/frontend/shopper/koket/template/page/html/header.phtml
@@ -91,6 +91,7 @@ if ( $config['design']['below_logo'] ) {
                     <a href="<?php echo $this->getUrl('') ?>" title="<?php echo $this->getLogoAlt() ?>" class="logo"><strong><?php echo $this->getLogoAlt() ?></strong><?php echo $this->getChildHtml('theme_logo', false) ?></a>
                     <?php endif; ?>
                     <!-- NAVIGATION -->
+                    TESTVERSIE!
                     <?php
                         if ( !$config['navigation']['use_wide_navigation'] && $config['navigation']['use_navigation'] ) {
                             echo $this->getChildHtml('topShopperMenu');
