--- a/KoketSite/app/locale/nl_NL/template/email/sales/invoice_new.html
+++ b/KoketSite/app/locale/nl_NL/template/email/sales/invoice_new.html
@@ -9,13 +9,13 @@
 <tr>
     <td align="center" valign="top">
         <!-- [ header starts here] -->
-        <table cellspacing="0" cellpadding="0" border="0" width="650">
+        <table cellspacing="0" cellpadding="0" border="0" width="100%">
             <tr>
                 <td valign="top"><a href="{{store url=""}}"><img src="{{skin url="images/logo_email.gif" _area='frontend'}}" alt="{{var order.getStoreGroupName()}}"  style="margin-bottom:10px;" border="0"/></a></td>
             </tr>
         </table>
         <!-- [ middle starts here] -->
-        <table cellspacing="0" cellpadding="0" border="0" width="650">
+        <table cellspacing="0" cellpadding="0" border="0" width="100%">
             <tr>
                 <td valign="top">
                     <p>
