--- a/KoketSite/app/locale/nl_NL/template/email/contact_form.html
+++ b/KoketSite/app/locale/nl_NL/template/email/contact_form.html
@@ -1,4 +1,4 @@
-<!--@subject Contact via website formulier @-->
+<!--@subject {{var store.getFrontendName()}} - Contact via website formulier @-->
 Naam: {{var data.name}}
 E-mail: {{var data.email}}
 Telefoon: {{var data.telephone}}
