--- a/KoketSite/app/locale/nl_NL/template/email/payment_failed.html
+++ b/KoketSite/app/locale/nl_NL/template/email/payment_failed.html
@@ -11,7 +11,7 @@ Available vars in this template:
   - sender_email    Sender email
 
 Use vars: {{var var_name}}
-*}<!--@subject Herinnering: Een betalingstransactie is mislukt @-->
+*}<!--@subject {{var store.getFrontendName()}} - Herinnering: Een betalingstransactie is mislukt @-->
 
 <table>
     <thead>
