--- a/KoketSite/app/locale/nl_NL/template/email/sitemap_generate_warning.html
+++ b/KoketSite/app/locale/nl_NL/template/email/sitemap_generate_warning.html
@@ -1,4 +1,4 @@
-<!--@subject Sitemap waarschuwingen @-->
+<!--@subject {{var store.getFrontendName()}} - Sitemap waarschuwingen @-->
 
 Het aanmaken van de sitemap gaf de volgende waarschuwingen:
 
