--- a/KoketSite/app/locale/nl_NL/template/email/account_new.html
+++ b/KoketSite/app/locale/nl_NL/template/email/account_new.html
@@ -1,97 +1,124 @@
+<!--@subject Hallo {{var customer.firstname}}, welkom bij {{var customer.store.website.name}}!  @-->
+
 <style type="text/css">
     body,td { color:#2f2f2f; font:13px/1.35em Tahoma, Verdana, Arial, Helvetica, sans-serif; }
 </style>
 
-<div style="font:11px/1.35em Verdana, Arial, Helvetica, sans-serif;">
-    <table cellspacing="0" cellpadding="0" border="0" width="98%" style="margin-top:10px; font:11px/1.35em Tahoma, Verdana, Arial, Helvetica, sans-serif; margin-bottom:10px;">
-        <tr>
-            <td align="center" valign="top">
-                <!-- [ header starts here] -->
-                <table cellspacing="0" cellpadding="0" border="0" width="650">
-                    <tr>
-                        <td valign="top">
-                            <a href="{{store url=""}}"><img src="{{skin url="images/logo_email.gif" _area='frontend'}}" alt="{{var customer.store.website.name}}"  style="margin-bottom:10px;" border="0"/></a></td>
-                    </tr>
-                </table>
+<html>
+<body style="padding: 0 0; margin: 0 0">
+<table align="center" border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" id="bodyTable"
+       style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;margin: 0;padding: 0;background-color: #d5ecd2;height: 100% !important;width: 100% !important;">
+    <tbody>
+    <tr>
+        <td align="center" valign="top" id="bodyCell"
+            style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;margin: 0;padding: 20px;border-top: 0;height: 100% !important;width: 100% !important;">
+            <!-- BEGIN TEMPLATE // -->
+            <table border="0" cellpadding="0" cellspacing="0" width="600" id="templateContainer"
+                   style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;border: 0;">
+                <tbody>
+                <tr>
+                    <td align="center" valign="top"
+                        style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                        <!-- BEGIN PREHEADER // -->
+                        {{block type="cms/block" block_id="mail-preheader" }}
+                        <!-- // END PREHEADER -->
+                    </td>
+                </tr>
+                <tr>
+                    <td align="center" valign="top"
+                        style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                        <!-- BEGIN HEADER // -->
+                        {{block type="cms/block" block_id="mail-header" }}
+                        <!-- // END HEADER -->
+                    </td>
+                </tr>
+                <tr>
+                    <td align="center" valign="top"
+                        style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                        <!-- BEGIN BODY // -->
+                        <table border="0" cellpadding="0" cellspacing="0" width="600" id="templateBody"
+                               style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;background-color: #FFFFFF;border-top: 0;border-bottom: 0;">
+                            <tbody>
+                            <tr>
+                                <td valign="top" class="bodyContainer"
+                                    style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                                    <table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnTextBlock"
+                                           style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                                        <tbody class="mcnTextBlockOuter">
+                                        <tr>
+                                            <td valign="top" class="mcnTextBlockInner"
+                                                style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
 
-                <!-- [ middle starts here] -->
-                <table cellspacing="0" cellpadding="0" border="0" width="650">
-                    <tr>
-                        <td valign="top">
-                            <p><strong>Beste {{var customer.firstname}},</strong><br/>
-                                Dank u voor uw aanmelding bij onze webshop. Om uw gegevens te bekijken kunt u bovenaan iedere pagina op onze webiste klikken op <a href="{{store url="customer/account/"}}" style="color:#1E7EC8;">Inloggen</a> of <a href="{{store url="customer/account/"}}" style="color:#1E7EC8;">Mijn profiel</a>. U hoeft dan alleen uw emailadres en wachtwoord in te vullen.</p>
+                                                <table align="left" border="0" cellpadding="0" cellspacing="0" width="600"
+                                                       class="mcnTextContentContainer"
+                                                       style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                                                    <tbody>
+                                                    <tr>
 
-                            <p>Nadat u bent ingelogt kunt het volgende doen:</p>
+                                                        <td valign="top" class="mcnTextContent"
+                                                            style="padding: 9px 18px;color: #2A2769;font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;line-height: 150%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;font-size: 15px;text-align: left;">
 
-                            <ul>
-                                <li>Sneller door de kassa heen bij het afrekenen.</li>
-                                <li>De status van bestellingen bekijken.</li>
-                                <li>Uw eerdere bestelllingen bekijken.</li>
-                                <li>Wijzigingen aanbrengen in uw adresgegevens.</li>
-                                <li>U opgeven voor de nieuwsbrief en andere productberichten.</li>
-                                <li>Uw wachtwoord wijzigen.</li>
-                                <li>Verschillende verzendadressen opslaan om een bestelling naar verschillende adressen te versturen. Handig voor familie en vrienden!</li>
-                            </ul>
+                                                            <!-- BEGIN BODY 1 ---------------------------------------------- // -->
+                                                            <p><strong>Beste {{var customer.firstname}},</strong><br/>
+                                                                Bedankt voor je aanmelding bij onze webshop. Om je gegevens te bekijken kan je bovenaan iedere pagina op onze website klikken op <a href="{{store url="customer/account/"}}" style="color:#1E7EC8;">Inloggen</a> of <a href="{{store url="customer/account/"}}" style="color:#1E7EC8;">Mijn account</a>. </p>
 
-                            <p>Wanneer u vragen heeft, neem dan gerust contact met ons op via <a style="color: rgb(30, 126, 200);" href="mailto:{{config path="trans_email/ident_general/email"}}">{{config path="trans_email/ident_general/email"}}</a></p>
-                            <p>Met vriendelijke groet,</p>
-                            <p><strong>{{var customer.store.website.name}}</strong></p>
-                            <p><a href="{{config path="web/unsecure/base_url"}}">{{config path="web/unsecure/base_url"}}</a></p>
-                        </td>
-                    </tr>
-                </table>
-            </td>
-        </tr>
-    </table>
-</div>
+                                                            <p>Nadat je bent ingelogt heb je de volgende mogelijkheden in je account:</p>
 
+                                                            <ul>
+                                                                <li>Je kortingspunten raadplegen.</li>
+                                                                <li>Sneller afrekenen.</li>
+                                                                <li>De status van bestellingen bekijken.</li>
+                                                                <li>Je eerdere bestellingen bekijken.</li>
+                                                                <li>Wijzigingen aanbrengen in je adresgegevens.</li>
+                                                                <li>Je in- of uitschrijven voor de nieuwsbrief.</li>
+                                                                <li>Je wachtwoord wijzigen.</li>
+                                                                <li>Verschillende verzendadressen opslaan om een bestelling naar verschillende adressen te versturen.</li>
+                                                            </ul>
 
+                                                            <p>We horen het graag als je nog vragen hebt. Neem gerust contact met ons op via <a style="color: rgb(30, 126, 200);" href="mailto:{{config path="trans_email/ident_general/email"}}">{{config path="trans_email/ident_general/email"}}</a> of bel ons in de winkel op <a style="color: #606060; font-weight: normal; text-decoration: none;" href="tel:+3232273145">03 | 227 31 45</a></p>
+                                                            <p>Met vriendelijke groet,</p>
 
+                                                            <p>Astrid<br><a href="{{config path="web/unsecure/base_url"}}">www.kokettekatinka.be</a></p>
+                                                            <!-- // END BODY 1 ---------------------------------------------- -->
 
+                                                        </td>
+                                                    </tr>
 
-<style type="text/css">
-body,td { color:#2f2f2f; font:13px/1.35em Tahoma, Verdana, Arial, Helvetica, sans-serif; }
-</style>
+                                                    <tr>
+                                                        <td align="center" valign="top" style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                                                            <!-- BEGIN PHOTO FOOTER  -->
+                                                            {{block type="cms/block" block_id="mail-page-wide-image" }}
+                                                            <!-- // END PHOTO FOOTER -->
+                                                        </td>
+                                                    </tr>
+                                                    </tbody>
+                                                </table>
 
-<div style="font:11px/1.35em Verdana, Arial, Helvetica, sans-serif;">
-    <table cellspacing="0" cellpadding="0" border="0" width="98%" style="margin-top:10px; font:11px/1.35em Tahoma, Verdana, Arial, Helvetica, sans-serif; margin-bottom:10px;">
-        <tr>
-            <td align="center" valign="top">
-                <!-- [ header starts here] -->
-                <table cellspacing="0" cellpadding="0" border="0" width="650">
-                    <tr>
-                        <td valign="top">
-                            <a href="{{store url=""}}"><img src="{{skin url="images/logo_email.gif" _area='frontend'}}" alt="{{var customer.store.website.name}}"  style="margin-bottom:10px;" border="0"/></a></td>
-                    </tr>
-                </table>
+                                            </td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                        <!-- // END BODY -->
+                    </td>
+                </tr>
+                <tr>
+                    <td align="center" valign="top"
+                        style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                        <!-- BEGIN FOOTER COLUMNS // -->
+                        {{block type="cms/block" block_id="mail-2-column-footer" }}
+                        <!-- // END FOOTER COLUMNS -->
+                    </td>
+                </tr>
 
-                <!-- [ middle starts here] -->
-                <table cellspacing="0" cellpadding="0" border="0" width="650">
-                    <tr>
-                        <td valign="top">
-                            <p><strong>Beste {{var customer.firstname}},</strong><br/>
-                            Dank u voor uw aanmelding bij onze webshop. Om uw gegevens te bekijken kunt u bovenaan iedere pagina op onze webiste klikken op <a href="{{store url="customer/account/"}}" style="color:#1E7EC8;">Inloggen</a> of <a href="{{store url="customer/account/"}}" style="color:#1E7EC8;">Mijn profiel</a>. U hoeft dan alleen uw emailadres en wachtwoord in te vullen.</p>
-
-                            <p>Nadat u bent ingelogt kunt het volgende doen:</p>
-
-                            <ul>
-                                <li>Sneller door de kassa heen bij het afrekenen.</li>
-                                <li>De status van bestellingen bekijken.</li>
-                                <li>Uw eerdere bestelllingen bekijken.</li>
-                                <li>Wijzigingen aanbrengen in uw adresgegevens.</li>
-																<li>U opgeven voor de nieuwsbrief en andere productberichten.</li>
-                                <li>Uw wachtwoord wijzigen.</li>
-                                <li>Verschillende verzendadressen opslaan om een bestelling naar verschillende adressen te versturen. Handig voor familie en vrienden!</li>
-                            </ul>
-
-                            <p>Wanneer u vragen heeft, neem dan gerust contact met ons op via <a style="color: rgb(30, 126, 200);" href="mailto:{{config path="trans_email/ident_general/email"}}">{{config path="trans_email/ident_general/email"}}</a></p>
-                            <p>Met vriendelijke groet,</p>
-							<p><strong>{{var customer.store.website.name}}</strong></p>
-                            <p><a href="{{config path="web/unsecure/base_url"}}">{{config path="web/unsecure/base_url"}}</a></p>
-                        </td>
-                    </tr>
-                </table>
-            </td>
-        </tr>
-    </table>
-</div>
+                </tbody>
+            </table>
+        </td>
+    </tr>
+    </tbody>
+</table>
+</body>
+</html>
