--- a/KoketSite/app/locale/nl_NL/template/email/account_password_reset_confirmation.html
+++ b/KoketSite/app/locale/nl_NL/template/email/account_password_reset_confirmation.html
@@ -1,4 +1,4 @@
-<!--@subject Password Reset Confirmation for {{var customer.name}} @-->
+<!--@subject {{var store.getFrontendName()}} - Paswoord veranderen voor {{var customer.name}}.  @-->
 <!--@vars
 {"store url=\"\"":"Store Url",
 "var logo_url":"Email Logo Image Url",
@@ -11,33 +11,109 @@
 body,td { color:#2f2f2f; font:11px/1.35em Verdana, Arial, Helvetica, sans-serif; }
 @-->
 
-<body style="background: #F6F6F6; font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 12px; margin: 0; padding: 0;">
-    <div style="background: #F6F6F6; font-family: Verdana, Arial, Helvetica, sans-serif; font-size: 12px; margin: 0; padding: 0;">
-        <table cellspacing="0" cellpadding="0" border="0" height="100%" width="100%">
-            <tr>
-                <td align="center" valign="top" style="padding: 20px 0 20px 0">
-                    <table bgcolor="FFFFFF" cellspacing="0" cellpadding="10" border="0" width="650" style="border:1px solid #E0E0E0;">
-                        <tr>
-                            <td valign="top">
-                                <a href="{{store url=""}}" style="color:#1E7EC8;"><img src="{{var logo_url}}" alt="{{var logo_alt}}" border="0"/></a>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td valign="top">
-                                <h1 style="font-size: 22px; font-weight: normal; line-height: 22px; margin: 0 0 11px 0;">Beste {{htmlescape var=$customer.name}},</h1>
-                                <p style="font-size: 12px; line-height: 16px; margin: 0 0 8px 0;">Er was zonet een vraag om je paswoord te wijzigen.</p>
-                                <p style="font-size: 12px; line-height: 16px; margin: 0;">Indien jij deze wijziging aangevraagd hebt, kan je hier je paswoord opnieuw instellen: <a href="{{store url="customer/account/resetpassword/" _query_id=$customer.id _query_token=$customer.rp_token}}" style="color:#1E7EC8;">{{store url="customer/account/resetpassword/" _query_id=$customer.id _query_token=$customer.rp_token}}</a></p>
-                                <p style="font-size: 12px; line-height: 16px; margin: 0;">Als de link niet werkt kan je de link kopiëren en zelf en in je internet browser plakken.</p>
-                                <br />
-                                <p style="font-size:12px; line-height:16px; margin:0;">Indien je deze wijziging niet aanvroeg, kan je deze mail negeren. Je paswoord blijft dan ongewijzigd.</p>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td style="background-color: #EAEAEA; text-align: center;"><p style="font-size:12px; margin:0; text-align: center;">Bedankt,<br> <strong>{{var store.getFrontendName()}}</strong></p></td>
-                        </tr>
-                    </table>
-                </td>
-            </tr>
-        </table>
-    </div>
+<html>
+<body style="padding: 0 0; margin: 0 0">
+<table align="center" border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" id="bodyTable"
+       style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;margin: 0;padding: 0;background-color: #d5ecd2;height: 100% !important;width: 100% !important;">
+    <tbody>
+    <tr>
+        <td align="center" valign="top" id="bodyCell"
+            style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;margin: 0;padding: 20px;border-top: 0;height: 100% !important;width: 100% !important;">
+            <!-- BEGIN TEMPLATE // -->
+            <table border="0" cellpadding="0" cellspacing="0" width="600" id="templateContainer"
+                   style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;border: 0;">
+                <tbody>
+                <tr>
+                    <td align="center" valign="top"
+                        style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                        <!-- BEGIN PREHEADER // -->
+                        {{block type="cms/block" block_id="mail-preheader" }}
+                        <!-- // END PREHEADER -->
+                    </td>
+                </tr>
+                <tr>
+                    <td align="center" valign="top"
+                        style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                        <!-- BEGIN HEADER // -->
+                        {{block type="cms/block" block_id="mail-header" }}
+                        <!-- // END HEADER -->
+                    </td>
+                </tr>
+                <tr>
+                    <td align="center" valign="top"
+                        style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                        <!-- BEGIN BODY // -->
+                        <table border="0" cellpadding="0" cellspacing="0" width="600" id="templateBody"
+                               style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;background-color: #FFFFFF;border-top: 0;border-bottom: 0;">
+                            <tbody>
+                            <tr>
+                                <td valign="top" class="bodyContainer"
+                                    style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                                    <table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnTextBlock"
+                                           style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                                        <tbody class="mcnTextBlockOuter">
+                                        <tr>
+                                            <td valign="top" class="mcnTextBlockInner"
+                                                style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+
+                                                <table align="left" border="0" cellpadding="0" cellspacing="0" width="600"
+                                                       class="mcnTextContentContainer"
+                                                       style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                                                    <tbody>
+                                                    <tr>
+
+                                                        <td valign="top" class="mcnTextContent"
+                                                            style="padding: 9px 18px;color: #2A2769;font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;line-height: 150%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;font-size: 15px;text-align: left;">
+
+                                                            <!-- BEGIN BODY 1 ---------------------------------------------- // -->
+                                                            <h1 style="font-size: 22px; font-weight: normal; line-height: 22px; margin: 0 0 11px 0;">Beste {{htmlescape var=$customer.name}},</h1>
+                                                            <p style="font-size: 12px; line-height: 16px; margin: 0 0 8px 0;">Er was zonet een vraag om je paswoord te wijzigen.</p>
+                                                            <p style="font-size: 12px; line-height: 16px; margin: 0;">Indien jij deze wijziging aangevraagd hebt, kan je hier je paswoord opnieuw instellen: <a href="{{store url="customer/account/resetpassword/" _query_id=$customer.id _query_token=$customer.rp_token}}" style="color:#1E7EC8;">{{store url="customer/account/resetpassword/" _query_id=$customer.id _query_token=$customer.rp_token}}</a></p>
+                                                            <p style="font-size: 12px; line-height: 16px; margin: 0;">Als de link niet werkt kan je de link kopiëren en zelf en in je internet browser plakken.</p>
+                                                            <br />
+                                                            <p style="font-size:12px; line-height:16px; margin:0;">Indien je deze wijziging niet aanvroeg, kan je deze mail negeren. Je paswoord blijft dan ongewijzigd.</p>
+
+                                                            <p style="font-size:12px; margin:0; text-align: center;"><br>Bedankt,<br>Astrid<br><strong>{{var store.getFrontendName()}}</strong></p>
+                                                            <!-- // END BODY 1 ---------------------------------------------- -->
+
+                                                        </td>
+                                                    </tr>
+
+                                                    <tr>
+                                                        <td align="center" valign="top" style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                                                            <!-- BEGIN PHOTO FOOTER  -->
+                                                            {{block type="cms/block" block_id="mail-page-wide-image" }}
+                                                            <!-- // END PHOTO FOOTER -->
+                                                        </td>
+                                                    </tr>
+                                                    </tbody>
+                                                </table>
+
+                                            </td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                        <!-- // END BODY -->
+                    </td>
+                </tr>
+                <tr>
+                    <td align="center" valign="top"
+                        style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                        <!-- BEGIN FOOTER COLUMNS // -->
+                        {{block type="cms/block" block_id="mail-2-column-footer" }}
+                        <!-- // END FOOTER COLUMNS -->
+                    </td>
+                </tr>
+
+                </tbody>
+            </table>
+        </td>
+    </tr>
+    </tbody>
+</table>
 </body>
+</html>
