--- a/KoketSite/app/locale/nl_NL/template/email/sales/order_new.html
+++ b/KoketSite/app/locale/nl_NL/template/email/sales/order_new.html
@@ -4,83 +4,165 @@
     body,td { color:#2f2f2f; font:11px/1.35em Verdana, Arial, Helvetica, sans-serif; }
 </style>
 
-<div style="font:11px/1.35em Verdana, Arial, Helvetica, sans-serif;">
-<table cellspacing="0" cellpadding="0" border="0" width="98%" style="margin-top:10px; font:11px/1.35em Verdana, Arial, Helvetica, sans-serif; margin-bottom:10px;">
-<tr>
-    <td align="center" valign="top">
-        <!-- [ header starts here] -->
-        <table cellspacing="0" cellpadding="0" border="0" width="650">
-            <tr>
-                <td valign="top"><a href="{{store url=""}}"><img src="{{skin url="images/logo_email.gif" _area='frontend'}}" alt="{{var order.getStoreGroupName()}}"  style="margin-bottom:10px;" border="0"/></a></td>
-            </tr>
-        </table>
-        <!-- [ middle starts here] -->
-        <table cellspacing="0" cellpadding="0" border="0" width="650">
-            <tr>
-                <td valign="top">
-                    <p>
-                        <strong>Beste {{var order.getCustomerFirstname()}}</strong>,<br/>
-                        Bedankt voor uw bestelling via {{var order.getStoreGroupName()}}.
-                        **
-                        U kunt de status van uw bestelling controleren door  <a href="{{store url="customer/account/"}}" style="color:#1E7EC8;">in te loggen op uw account</a>.
-                        Indien u vragen heeft, neem dan gerust contact op via <a href="mailto:{{config path="trans_email/ident_general/email"}}" style="color:#1E7EC8;">{{config path="trans_email/ident_general/email"}}</a> of telefonisch <span class="nobr">0031 000 000000.</span></p>
-                  <p>Orderbevestiging:</p>
+<html>
+<body style="padding: 0 0; margin: 0 0">
+<table align="center" border="0" cellpadding="0" cellspacing="0" height="100%" width="100%" id="bodyTable"
+       style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;margin: 0;padding: 0;background-color: #d5ecd2;height: 100% !important;width: 100% !important;">
+    <tbody>
+    <tr>
+        <td align="center" valign="top" id="bodyCell"
+            style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;margin: 0;padding: 20px;border-top: 0;height: 100% !important;width: 100% !important;">
+            <!-- BEGIN TEMPLATE // -->
+            <table border="0" cellpadding="0" cellspacing="0" width="600" id="templateContainer"
+                   style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;border: 0;">
+                <tbody>
+                <tr>
+                    <td align="center" valign="top"
+                        style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                        <!-- BEGIN PREHEADER // -->
+                        {{block type="cms/block" block_id="mail-preheader" }}
+                        <!-- // END PREHEADER -->
+                    </td>
+                </tr>
+                <tr>
+                    <td align="center" valign="top"
+                        style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                        <!-- BEGIN HEADER // -->
+                        {{block type="cms/block" block_id="mail-header" }}
+                        <!-- // END HEADER -->
+                    </td>
+                </tr>
+                <tr>
+                    <td align="center" valign="top"
+                        style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                        <!-- BEGIN BODY // -->
+                        <table border="0" cellpadding="0" cellspacing="0" width="600" id="templateBody"
+                               style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;background-color: #FFFFFF;border-top: 0;border-bottom: 0;">
+                            <tbody>
+                            <tr>
+                                <td valign="top" class="bodyContainer"
+                                    style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                                    <table border="0" cellpadding="0" cellspacing="0" width="100%" class="mcnTextBlock"
+                                           style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                                        <tbody class="mcnTextBlockOuter">
+                                        <tr>
+                                            <td valign="top" class="mcnTextBlockInner"
+                                                style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
 
-                    <h3 style="border-bottom:2px solid #eee; font-size:1.05em; padding-bottom:1px; ">Uw bestelling #{{var order.increment_id}} <small>(geplaatst op {{var order.getCreatedAtFormated('long')}})</small></h3>
-                    <table cellspacing="0" cellpadding="0" border="0" width="100%">
-                        <thead>
-                        <tr>
-                            <th align="left" width="48.5%" bgcolor="#d9e5ee" style="padding:5px 9px 6px 9px; border:1px solid #bebcb7; border-bottom:none; line-height:1em;">Factuurgegevens:</th>
-                            <th width="3%"></th>
-                            <th align="left" width="48.5%" bgcolor="#d9e5ee" style="padding:5px 9px 6px 9px; border:1px solid #bebcb7; border-bottom:none; line-height:1em;">Betaalmethode:</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
-                            <td valign="top" style="padding:7px 9px 9px 9px; border:1px solid #bebcb7; border-top:0; background:#f8f7f5;">
-                                {{var order.getBillingAddress().format('html')}}
-                            </td>
-                            <td>&nbsp;</td>
-                            <td valign="top" style="padding:7px 9px 9px 9px; border:1px solid #bebcb7; border-top:0; background:#f8f7f5;">
-                                {{var payment_html}}
-                            </td>
-                        </tr>
-                        </tbody>
-                    </table>
-                    <br/>
-                    {{depend order.getIsNotVirtual()}}
-                    <table cellspacing="0" cellpadding="0" border="0" width="100%">
-                        <thead>
-                        <tr>
-                            <th align="left" width="48.5%" bgcolor="#d9e5ee" style="padding:5px 9px 6px 9px; border:1px solid #bebcb7; border-bottom:none; line-height:1em;">Verzendinformatie:</th>
-                            <th width="3%"></th>
-                            <th align="left" width="48.5%" bgcolor="#d9e5ee" style="padding:5px 9px 6px 9px; border:1px solid #bebcb7; border-bottom:none; line-height:1em;">Verzendmethode:</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-                        <tr>
-                            <td valign="top" style="padding:7px 9px 9px 9px; border:1px solid #bebcb7; border-top:0; background:#f8f7f5;">
-                                {{var order.getShippingAddress().format('html')}}
-                            </td>
-                            <td>&nbsp;</td>
-                            <td valign="top" style="padding:7px 9px 9px 9px; border:1px solid #bebcb7; border-top:0; background:#f8f7f5;">
-                                {{var order.getShippingDescription()}}
-                            </td>
-                        </tr>
-                        </tbody>
-                    </table>
-                    <br/>
-                    {{/depend}}
-                    {{layout handle="sales_email_order_items" order=$order}}
+                                                <table align="left" border="0" cellpadding="0" cellspacing="0" width="600"
+                                                       class="mcnTextContentContainer"
+                                                       style="border-collapse: collapse;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                                                    <tbody>
+                                                    <tr>
 
-                    {{var items_html}}
-                    <br/>
-                    {{var order.getEmailCustomerNote()}}
-                    <p>Dank u voor uw vertrouwen,<br/><strong>{{var order.getStoreGroupName()}}</strong></p>
-                </td>
-          </tr>
-        </table>
-    </td>
-</tr>
+                                                        <td valign="top" class="mcnTextContent"
+                                                            style="padding: 9px 18px;color: #2A2769;font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;line-height: 150%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;font-size: 15px;text-align: left;">
+
+                                                            <!-- BEGIN BODY 1 ---------------------------------------------- // -->
+                                                            <p>
+                                                                <strong>Beste {{var order.getCustomerFirstname()}}</strong>,
+                                                            </p>
+                                                            <p>
+                                                                Bedankt voor je bestelling via {{var order.getStoreGroupName()}}.
+                                                            </p>
+                                                            <p>
+                                                                Je kan de status van je bestelling controleren door <a href="{{store url="customer/account/"}}" style="color:#1E7EC8;">in te loggen op je account</a>.</p>
+                                                            <p>Indien je nog vragen hebt, neem dan gerust contact op via <a href="mailto:{{config path="trans_email/ident_general/email"}}" style="color:#1E7EC8;">{{config path="trans_email/ident_general/email"}}</a> of telefonisch op <span class="nobr">+32 (0)3 227 31 45.</span></p>
+                                                            <p>Orderbevestiging:</p>
+
+                                                            <h3 style="border-bottom:2px solid #eee; font-size:1.05em; padding-bottom:1px; ">Je bestelling #{{var order.increment_id}} <small>(geplaatst op {{var order.getCreatedAtFormated('long')}})</small></h3>
+                                                            <table cellspacing="0" cellpadding="0" border="0" width="100%">
+                                                                <thead>
+                                                                <tr>
+                                                                    <th align="left" width="48.5%" bgcolor="#d9e5ee" style="padding:5px 9px 6px 9px; border:1px solid #bebcb7; border-bottom:none; line-height:1em;">Factuurgegevens:</th>
+                                                                    <th width="3%"></th>
+                                                                    <th align="left" width="48.5%" bgcolor="#d9e5ee" style="padding:5px 9px 6px 9px; border:1px solid #bebcb7; border-bottom:none; line-height:1em;">Betaalmethode:</th>
+                                                                </tr>
+                                                                </thead>
+                                                                <tbody>
+                                                                <tr>
+                                                                    <td valign="top" style="padding:7px 9px 9px 9px; border:1px solid #bebcb7; border-top:0; background:#f8f7f5;">
+                                                                        {{var order.getBillingAddress().format('html')}}
+                                                                    </td>
+                                                                    <td>&nbsp;</td>
+                                                                    <td valign="top" style="padding:7px 9px 9px 9px; border:1px solid #bebcb7; border-top:0; background:#f8f7f5;">
+                                                                        {{var payment_html}}
+                                                                    </td>
+                                                                </tr>
+                                                                </tbody>
+                                                            </table>
+                                                            <br/>
+                                                            {{depend order.getIsNotVirtual()}}
+                                                            <table cellspacing="0" cellpadding="0" border="0" width="100%">
+                                                                <thead>
+                                                                <tr>
+                                                                    <th align="left" width="48.5%" bgcolor="#d9e5ee" style="padding:5px 9px 6px 9px; border:1px solid #bebcb7; border-bottom:none; line-height:1em;">Verzendinformatie:</th>
+                                                                    <th width="3%"></th>
+                                                                    <th align="left" width="48.5%" bgcolor="#d9e5ee" style="padding:5px 9px 6px 9px; border:1px solid #bebcb7; border-bottom:none; line-height:1em;">Verzendmethode:</th>
+                                                                </tr>
+                                                                </thead>
+                                                                <tbody>
+                                                                <tr>
+                                                                    <td valign="top" style="padding:7px 9px 9px 9px; border:1px solid #bebcb7; border-top:0; background:#f8f7f5;">
+                                                                        {{var order.getShippingAddress().format('html')}}
+                                                                    </td>
+                                                                    <td>&nbsp;</td>
+                                                                    <td valign="top" style="padding:7px 9px 9px 9px; border:1px solid #bebcb7; border-top:0; background:#f8f7f5;">
+                                                                        {{var order.getShippingDescription()}}
+                                                                    </td>
+                                                                </tr>
+                                                                </tbody>
+                                                            </table>
+                                                            <br/>
+                                                            {{/depend}}
+                                                            {{layout handle="sales_email_order_items" order=$order}}
+
+                                                            {{var items_html}}
+                                                            <br/>
+                                                            {{var order.getEmailCustomerNote()}}
+                                                            <p>Bedankt voor je aankoop,</p>
+                                                            <p>Astrid<br><strong>{{var order.getStoreGroupName()}}</strong></p>
+
+                                                            <!-- // END BODY 1 ---------------------------------------------- -->
+
+                                                        </td>
+                                                    </tr>
+
+                                                    <tr>
+                                                        <td align="center" valign="top" style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                                                            <!-- BEGIN PHOTO FOOTER  -->
+                                                            {{block type="cms/block" block_id="mail-page-wide-image" }}
+                                                            <!-- // END PHOTO FOOTER -->
+                                                        </td>
+                                                    </tr>
+                                                    </tbody>
+                                                </table>
+
+                                            </td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+                        <!-- // END BODY -->
+                    </td>
+                </tr>
+                <tr>
+                    <td align="center" valign="top"
+                        style="mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;">
+                        <!-- BEGIN FOOTER COLUMNS // -->
+                        {{block type="cms/block" block_id="mail-2-column-footer" }}
+                        <!-- // END FOOTER COLUMNS -->
+                    </td>
+                </tr>
+
+                </tbody>
+            </table>
+        </td>
+    </tr>
+    </tbody>
 </table>
-</div>
+</body>
+</html>
