--- a/KoketSite/app/locale/nl_NL/template/email/sales/invoice_update_guest.html
+++ b/KoketSite/app/locale/nl_NL/template/email/sales/invoice_update_guest.html
@@ -60,7 +60,7 @@
 
                                                             <p>
                                                                 <strong>Beste {{var billing.getName()}}</strong>,<br/>
-                                                                Uw bestelling # {{var order.increment_id}} is <br/>
+                                                                Uw bestelnummer {{var order.increment_id}} is <br/>
                                                                 <strong>{{var order.getStatusLabel()}}</strong>.
                                                             </p>
                                                             <p>Je kan de status van je order controleren door <a href="{{store url="customer/account/"}}" style="color:#1E7EC8;">in te loggen op je account</a>.</p>
