--- a/KoketSite/app/locale/nl_NL/template/email/sales/shipment_update.html
+++ b/KoketSite/app/locale/nl_NL/template/email/sales/shipment_update.html
@@ -57,7 +57,7 @@
                                                             <!-- BEGIN BODY 1 ---------------------------------------------- // -->
                                                             <p>
                                                                 <strong>Beste {{var order.getCustomerName()}}</strong>,<br/>
-                                                                Je bestelling # {{var order.increment_id}} is <br/>
+                                                                Je bestelling met nummer {{var order.increment_id}} is <br/>
                                                                 <strong>{{var order.getStatusLabel()}}</strong>.
                                                             </p>
                                                             <p>Je kan de status van je order controleren door  <a href="{{store url="customer/account/"}}" style="color:#1E7EC8;">op je account in te loggen</a>.</p>
