--- a/KoketSite/app/locale/nl_NL/template/email/sales/shipment_update_guest.html
+++ b/KoketSite/app/locale/nl_NL/template/email/sales/shipment_update_guest.html
@@ -57,7 +57,7 @@
                                                             <!-- BEGIN BODY 1 ---------------------------------------------- // -->
                                                             <p>
                                                                 <strong>Beste {{var billing.getName()}}</strong>,<br/>
-                                                                Je bestelling # {{var order.increment_id}} is <br/>
+                                                                Je bestelling met nummer {{var order.increment_id}} is <br/>
                                                                 <strong>{{var order.getStatusLabel()}}</strong>.
                                                             </p>
                                                             <p>{{var comment}}</p>
