--- a/KoketSite/app/locale/nl_NL/template/email/account_password_reset_confirmation.html
+++ b/KoketSite/app/locale/nl_NL/template/email/account_password_reset_confirmation.html
@@ -66,14 +66,15 @@ body,td { color:#2f2f2f; font:11px/1.35em Verdana, Arial, Helvetica, sans-serif;
                                                             style="padding: 9px 18px;color: #2A2769;font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;line-height: 150%;mso-table-lspace: 0pt;mso-table-rspace: 0pt;-ms-text-size-adjust: 100%;-webkit-text-size-adjust: 100%;font-size: 15px;text-align: left;">
 
                                                             <!-- BEGIN BODY 1 ---------------------------------------------- // -->
-                                                            <h1 style="font-size: 22px; font-weight: normal; line-height: 22px; margin: 0 0 11px 0;">Beste {{htmlescape var=$customer.name}},</h1>
-                                                            <p style="font-size: 12px; line-height: 16px; margin: 0 0 8px 0;">Er was zonet een vraag om je paswoord te wijzigen.</p>
-                                                            <p style="font-size: 12px; line-height: 16px; margin: 0;">Indien jij deze wijziging aangevraagd hebt, kan je hier je paswoord opnieuw instellen: <a href="{{store url="customer/account/resetpassword/" _query_id=$customer.id _query_token=$customer.rp_token}}" style="color:#1E7EC8;">{{store url="customer/account/resetpassword/" _query_id=$customer.id _query_token=$customer.rp_token}}</a></p>
-                                                            <p style="font-size: 12px; line-height: 16px; margin: 0;">Als de link niet werkt kan je de link kopiëren en zelf en in je internet browser plakken.</p>
+                                                            <p>Beste {{htmlescape var=$customer.name}},</p>
+                                                            <p>Er was zonet een vraag om je paswoord te wijzigen.</p>
+                                                            <p>Indien jij deze wijziging aangevraagd hebt, kan je hier je paswoord opnieuw instellen: <a href="{{store url="customer/account/resetpassword/" _query_id=$customer.id _query_token=$customer.rp_token}}" style="color:#1E7EC8;">{{store url="customer/account/resetpassword/" _query_id=$customer.id _query_token=$customer.rp_token}}</a></p>
+                                                            <p>Als de link niet werkt kan je de link kopiëren en zelf en in je internet browser plakken.</p>
                                                             <br />
-                                                            <p style="font-size:12px; line-height:16px; margin:0;">Indien je deze wijziging niet aanvroeg, kan je deze mail negeren. Je paswoord blijft dan ongewijzigd.</p>
+                                                            <p>Indien je deze wijziging niet aanvroeg, kan je deze mail negeren. Je paswoord blijft dan ongewijzigd.</p>
 
-                                                            <p style="font-size:12px; margin:0; text-align: center;"><br>Bedankt,<br>Astrid<br><strong>{{var store.getFrontendName()}}</strong></p>
+                                                            <p>Met vriendelijke groet,</p>
+                                                            <p>Astrid,<br><strong>{{var customer.store.website.name}}</strong></p>
                                                             <!-- // END BODY 1 ---------------------------------------------- -->
 
                                                         </td>
