--- a/KoketSite/app/locale/nl_NL/template/email/sales/creditmemo_new.html
+++ b/KoketSite/app/locale/nl_NL/template/email/sales/creditmemo_new.html
@@ -1,4 +1,4 @@
-<!--@subject {{var store.getFrontendName()}} -  Creditnota # {{var creditmemo.increment_id}} voor bestelling # {{var order.increment_id}} @-->
+<!--@subject {{var store.getFrontendName()}} -  Creditnota # {{var creditmemo.increment_id}} voor bestelnummer {{var order.increment_id}} @-->
 
 <style type="text/css">
     body,td { color:#2f2f2f; font:11px/1.35em Verdana, Arial, Helvetica, sans-serif; }
@@ -65,7 +65,7 @@
                                                                 Je kan de status van je bestelling controleren door  <a href="{{store url="customer/account/"}}" style="color:#1E7EC8;">in te loggen op je account</a>.
                                                                 Indien je vragen hebt, neem dan gerust contact op via <a href="mailto:{{config path="trans_email/ident_general/email"}}" style="color:#1E7EC8;">{{config path="trans_email/ident_general/email"}}</a> of telefonisch op <span class="nobr">+32 (0)3 227 31 45.</span></p>
                                                             <h3 style="border-bottom:2px solid #eee; font-size:1.05em; padding-bottom:1px; ">
-                                                                Je creditnota #{{var creditmemo.increment_id}} voor bestelling #{{var order.increment_id}}
+                                                                Je creditnota {{var creditmemo.increment_id}} voor bestelling {{var order.increment_id}}
                                                             </h3>
                                                             <table cellspacing="0" cellpadding="0" border="0" width="100%">
                                                                 <thead>
