--- a/KoketSite/app/locale/nl_NL/template/email/sales/creditmemo_new_guest.html
+++ b/KoketSite/app/locale/nl_NL/template/email/sales/creditmemo_new_guest.html
@@ -1,4 +1,4 @@
-<!--@subject {{var order.getStoreGroupName()}}: Creditnota # {{var creditmemo.increment_id}} voor Bestelling # {{var order.increment_id}} @-->
+<!--@subject {{var order.getStoreGroupName()}}: Creditnota # {{var creditmemo.increment_id}} voor bestelnummer {{var order.increment_id}} @-->
 
 <style type="text/css">
     body,td { color:#2f2f2f; font:11px/1.35em Verdana, Arial, Helvetica, sans-serif; }
@@ -64,7 +64,7 @@
                                                                 Bedankt voor je bestelling via {{var order.getStoreGroupName()}}.
                                                                 Indien je nog vragen hebt, neem dan gerust contact op via <a href="mailto:{{config path="trans_email/ident_general/email"}}" style="color:#1E7EC8;">{{config path="trans_email/ident_general/email"}}</a> of telefonisch op <span class="nobr">+32 (0)3 227 31 45.</span></p>
                                                             <h3 style="border-bottom:2px solid #eee; font-size:1.05em; padding-bottom:1px; ">
-                                                                Je creditnota #{{var creditmemo.increment_id}} voor bestelling #{{var order.increment_id}}
+                                                                Je creditnota {{var creditmemo.increment_id}} voor bestelling {{var order.increment_id}}
                                                             </h3>
                                                             <table cellspacing="0" cellpadding="0" border="0" width="100%">
                                                                 <thead>
