--- a/KoketSite/app/locale/nl_NL/template/email/sales/invoice_new_guest.html
+++ b/KoketSite/app/locale/nl_NL/template/email/sales/invoice_new_guest.html
@@ -1,6 +1,6 @@
 
 
-<!--@subject  {{var order.getStoreGroupName()}}: Factuur # {{var invoice.increment_id}} voor bestelling # {{var order.increment_id}} @-->
+<!--@subject  {{var order.getStoreGroupName()}}: Factuur # {{var invoice.increment_id}} voor bestelnummer {{var order.increment_id}} @-->
 
 <style type="text/css">
     body,td { color:#2f2f2f; font:11px/1.35em Verdana, Arial, Helvetica, sans-serif; }
@@ -79,7 +79,7 @@
                                                                 Bedankt voor uw bestelling op {{var order.getStoreGroupName()}}.
                                                                 Indien u vragen heeft, neem dan gerust contact op via <a href="mailto:{{config path="trans_email/ident_general/email"}}" style="color:#1E7EC8;">{{config path="trans_email/ident_general/email"}}</a> of telefonisch <span class="nobr">0031 000 000000.</span></p>
                                                             <h3 style="border-bottom:2px solid #eee; font-size:1.05em; padding-bottom:1px; ">
-                                                                Uw factuur #{{var invoice.increment_id}} voor bestelling #{{var order.increment_id}}
+                                                                Uw factuur {{var invoice.increment_id}} voor bestelling {{var order.increment_id}}
                                                             </h3>
                                                             <table cellspacing="0" cellpadding="0" border="0" width="100%">
                                                                 <thead>
@@ -213,7 +213,7 @@
                                 via <span class="nobr">0032 (03) 227 31 45.</span></p>
 
                             <h3 style="border-bottom:2px solid #eee; font-size:1.05em; padding-bottom:1px;">
-                                Je factuur #{{var invoice.increment_id}} voor bestelling #{{var order.increment_id}}
+                                Je factuur {{var invoice.increment_id}} voor bestelling {{var order.increment_id}}
                             </h3>
                             <table cellspacing="0" cellpadding="0" border="0" width="100%">
                                 <thead>
