--- a/KoketSite/app/locale/nl_NL/template/email/sales/order_update.html
+++ b/KoketSite/app/locale/nl_NL/template/email/sales/order_update.html
@@ -1,4 +1,4 @@
-<!--@subject {{var order.getStoreGroupName()}}: Bestelling # {{var order.increment_id}} update @-->
+<!--@subject {{var order.getStoreGroupName()}}: bestelnummer {{var order.increment_id}} update @-->
 <style type="text/css">body,td { color:#2f2f2f; font:11px/1.35em Verdana, Arial, Helvetica, sans-serif; }</style>
 
 <html>
@@ -57,7 +57,7 @@
 
                                                             <!-- BEGIN BODY 1 ---------------------------------------------- // -->
                                                             <strong>Beste {{var order.getCustomerName()}}</strong>,<br/>
-                                                            Je bestelling # {{var order.increment_id}} is<br/>
+                                                            Je bestelling met nummer {{var order.increment_id}} is<br/>
                                                             <strong>{{var order.getStatusLabel()}}</strong>.
                                                             </p>
                                                             <p>Je kan de status van je bestelling controleren door  <a href="{{store url="customer/account/"}}" style="color:#1E7EC8;">in te loggen op je account</a>.</p>
