--- a/KoketSite/app/locale/nl_NL/template/email/sales/order_update_guest.html
+++ b/KoketSite/app/locale/nl_NL/template/email/sales/order_update_guest.html
@@ -1,4 +1,4 @@
-<!--@subject {{var order.getStoreGroupName()}}: Bestelling # {{var order.increment_id}} update @-->
+<!--@subject {{var order.getStoreGroupName()}}: bestelnummer {{var order.increment_id}} update @-->
 <style type="text/css">body,td { color:#2f2f2f; font:11px/1.35em Verdana, Arial, Helvetica, sans-serif; }</style>
 <html>
 <body style="padding: 0 0; margin: 0 0">
@@ -57,7 +57,7 @@
                                                             <!-- BEGIN BODY 1 ---------------------------------------------- // -->
                                                             <p>
                                                                 <strong>Beste {{var billing.getName()}}</strong>,<br/>
-                                                                Uw bestelling # {{var order.increment_id}} is <br/>
+                                                                Uw bestelnummer {{var order.increment_id}} is <br/>
                                                                 <strong>{{var order.getStatusLabel()}}</strong>.
                                                             </p>
                                                             <p>{{var comment}}</p>
