mail templates: width 100% one page checkout: initial check on shipping method disabled

--- a/KoketSite/app/design/frontend/base/default/template/wishlist/email/items.phtml
+++ b/KoketSite/app/design/frontend/base/default/template/wishlist/email/items.phtml
@@ -27,7 +27,7 @@
 ?>
 <?php $l = $this->getWishlistItemsCount() ?>
 <div style="border:1px solid #E0E0E0; padding:15px; background:#F9F9F9;">
-<table cellspacing="0" cellpadding="0" border="0" width="650">
+<table cellspacing="0" cellpadding="0" border="0" width="100%">
     <tr>
     <?php $i = 0; foreach ($this->getWishlistItems() as $item): $i++ ?>
         <?php /* @var $item Mage_Wishlist_Model_Item */ ?>
