tmp text proefkonijn

--- a/KoketSite/app/design/frontend/base/default/template/opc/customer/form/register.phtml
+++ b/KoketSite/app/design/frontend/base/default/template/opc/customer/form/register.phtml
@@ -14,6 +14,7 @@
     <div class="page-title">
         <h1><?php echo $this->__('Create an Account') ?></h1>
     </div>
+    <h2 style="padding: 20px 20px;background-color: #a7d194">Hier moet de tekst van de proefkonijnactie komen!</h2>
     <?php echo $this->getChildHtml('form_fields_before')?>
     <?php echo $this->getMessagesBlock()->getGroupedHtml() ?>
     <?php echo $this->getChildHtml('paypalauth.register'); ?>
