--- a/KoketSite/app/locale/nl_NL/template/email/admin_password_new.html
+++ b/KoketSite/app/locale/nl_NL/template/email/admin_password_new.html
@@ -58,7 +58,7 @@
                                                             <!-- BEGIN BODY 1 ---------------------------------------------- // -->
                                                             <p><strong>Beste {{var user.name}}</strong>,<br/>
                                                                 Je nieuw wachtwoord is: {{var password}}</p>
-                                                            <p>Je kan je wachtwoord op ieder moment wijzigen via  <a href="{{store url="adminhtml/system_account/"}}" style="color:#1E7EC8;">Mijn account</a>.<p>
+                                                            <p>Indien je van ons een wachtwoord kreeg, raden we je om veiligheidsredenen raden aan om je wachtwoord te wijzigen via <a href="{{store url="adminhtml/system_account/"}}" style="color:#1E7EC8;">Mijn account</a>. <p>
 
                                                             <p>Wanneer je vragen hebt, neem dan gerust contact met ons op via <a style="color: rgb(30, 126, 200);" href="mailto:{{config path="trans_email/ident_general/email"}}">{{config path="trans_email/ident_general/email"}}</a> of telefonisch op <span class="nobr">+32 (0)3 227 31 45</span></p>
                                                             <p>Met vriendelijke groet,</p>
