--- a/KoketSite/app/locale/nl_NL/template/email/password_new.html
+++ b/KoketSite/app/locale/nl_NL/template/email/password_new.html
@@ -59,7 +59,7 @@
                                                             <!-- BEGIN BODY 1 ---------------------------------------------- // -->
                                                             <p><strong>Beste {{var customer.firstname}}</strong>,<br/>
                                                                 Je nieuw wachtwoord is: {{var customer.password}}</p>
-                                                            <p>Je kan je wachtwoord op ieder moment wijzigen via <a href="{{store url="customer/account/"}}" style="color:#1E7EC8;">Mijn account</a>.
+                                                            <p>Indien je van ons een wachtwoord kreeg, raden we je om veiligheidsredenen raden aan om je wachtwoord te wijzigen via <a href="{{store url="customer/account/"}}" style="color:#1E7EC8;">Mijn account</a>. <p>
                                                             <p>
                                                             <p>Met vriendelijke groet,</p>
                                                             <p>Astrid<br><strong>{{var customer.store.website.name}}</strong></p>
