rename afleveradres naar leveradres update extension om total bedrag via site te zetten (wegens verandering TAX in backend)

--- a/KoketSite/app/locale/nl_NL/template/email/account_new.html
+++ b/KoketSite/app/locale/nl_NL/template/email/account_new.html
@@ -61,7 +61,7 @@
                                                             <!-- BEGIN BODY 1 ---------------------------------------------- // -->
                                                             <p><strong>Beste {{var customer.firstname}},</strong><br/>
                                                                 Bedankt voor je aanmelding bij onze webshop. Om je gegevens te bekijken kan je bovenaan iedere pagina op onze website klikken op <a href="{{store url="customer/account/"}}" style="color:#1E7EC8;">Inloggen</a> of <a href="{{store url="customer/account/"}}" style="color:#1E7EC8;">Mijn account</a>. </p>
-                                                            <p>Als je je paswoord bent vergeten, kan je via de functie <a href="https://www.kokettekatinka.be/customer/account/forgotpassword/">Passwoord vergeten</a> een nieuw paswoord aanmaken. Om veiligheidsredenen wordt je paswoord nooit via mail verstuurd.</p>
+                                                            <p>Als je je paswoord bent vergeten, kan je via de functie <a href="https://www.kokettekatinka.be/customer/account/forgotpassword/">Passwoord vergeten</a> een nieuw paswoord aanmaken.</p>
                                                             <p>Nadat je bent ingelogd heb je de volgende mogelijkheden in je account:</p>
 
                                                             <ul>
