--- a/KoketSite/app/design/frontend/shopper/koket/template/opc/wrapper.phtml
+++ b/KoketSite/app/design/frontend/shopper/koket/template/opc/wrapper.phtml
@@ -1,9 +1,15 @@
+
 <script type="text/javascript">countryRegions = <?php echo $this->helper('directory')->getRegionJson() ?></script>
 <div class="opc-wrapper-opc">
     <div class="page-title">
 	    <h1><?php echo $this->__('Checkout')?></h1>
     </div>
-	<p><?php echo $this->__('Fill in the Fields below to complete your purchase!')?></p>
+
+    <!--GERT: add next line to have static page on cart - eg to inform about vacation-->
+    <?php echo $this->getLayout()->createBlock('cms/block')->setBlockId('cart_extra_info')->toHTML(); ?>
+
+
+    <p><?php echo $this->__('Fill in the Fields below to complete your purchase!')?></p>
 	
 	<?php if (!Mage::getSingleton('customer/session')->isLoggedIn()):?>
 		<?php echo $this->getChildHtml('login');?>	
